# CppEventSystem

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: event_system.hpp  player.hpp  random01.hpp
scripts/: build.bat  build.sh
src/: main.cpp  random01.cpp
